fix hero section text overflowing

--- a/Projekt_1/css/style.css
+++ b/Projekt_1/css/style.css
@@ -2,12 +2,12 @@
 	background-image: url(../img/gallery/Photo69.png);
 	background-size: cover;
 	background-position: center;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .hero-content {
 	color: white;
-	height: 100%;
+	min-height: 100vh;
 	width: 100%;
 	padding-left: 16rem;
 	padding-right: 25%;
